--- a/book.toml
+++ b/book.toml
@@ -1,5 +1,5 @@
 [book]
-authors = ["Yandex Data School"]
+authors = ["Yandex School of Data Analysis"]
 language = "ru"
 multilingual = false
 src = "src"
